feat: implement optional requests
