# projects/basic/app/api/optional-request/frourio.client.ts
@@ -1,0 +1,177 @@
+/* This is code generated by @frourio/next. Do not edit directly. */
+import type { FrourioClientOption } from '@frourio/next';
+import { z } from 'zod';
+import { frourioSpec as frourioSpec_1hegnn } from './frourio'
+
+export const fc = (option?: FrourioClientOption) => ({
+  $url: $url_1hegnn(option),
+  $build(req?: Parameters<ReturnType<typeof methods_1hegnn>['$get']>[0] | null): [
+    key: { lowLevel: true; baseURL: FrourioClientOption['baseURL']; dir: string } & Omit<Parameters<ReturnType<typeof methods_1hegnn>['$get']>[0], 'init'> | null,
+    fetcher: () => Promise<NonNullable<Awaited<ReturnType<ReturnType<typeof methods_1hegnn>['$get']>>>>,
+  ] {
+    if (req === null) return [null, () => Promise.reject(new Error('Fetcher is disabled.'))];
+
+    const { init, ...rest } = req ?? {};
+
+    return [{ lowLevel: true, baseURL: option?.baseURL, dir: '/api/optional-request', ...rest }, () => methods_1hegnn(option).$get(req)];
+  },
+  ...methods_1hegnn(option),
+});
+
+export const $fc = (option?: FrourioClientOption) => ({
+  $url: {
+    get(req?: Parameters<ReturnType<typeof $url_1hegnn>['get']>[0]): string {
+      const result = $url_1hegnn(option).get(req);
+
+      if (!result.isValid) throw result.reason;
+
+      return result.data;
+    },
+    post(): string {
+      const result = $url_1hegnn(option).post();
+
+      if (!result.isValid) throw result.reason;
+
+      return result.data;
+    },
+  },
+  $build(req?: Parameters<ReturnType<typeof methods_1hegnn>['$get']>[0] | null): [
+    key: { lowLevel: false; baseURL: FrourioClientOption['baseURL']; dir: string } & Omit<Parameters<ReturnType<typeof methods_1hegnn>['$get']>[0], 'init'> | null,
+    fetcher: () => Promise<z.infer<typeof frourioSpec_1hegnn.get.res[200]['body']>>,
+  ] {
+    if (req === null) return [null, () => Promise.reject(new Error('Fetcher is disabled.'))];
+
+    const { init, ...rest } = req ?? {};
+
+    return [{ lowLevel: false, baseURL: option?.baseURL, dir: '/api/optional-request', ...rest }, () => $fc(option).$get(req)];
+  },
+  async $get(req?: Parameters<ReturnType<typeof methods_1hegnn>['$get']>[0]): Promise<z.infer<typeof frourioSpec_1hegnn.get.res[200]['body']>> {
+    const result = await methods_1hegnn(option).$get(req);
+
+    if (!result.isValid) throw result.isValid === false ? result.reason : result.error;
+
+    return result.data.body;
+  },
+  async $post(req?: Parameters<ReturnType<typeof methods_1hegnn>['$post']>[0]): Promise<void> {
+    const result = await methods_1hegnn(option).$post(req);
+
+    if (!result.isValid) throw result.isValid === false ? result.reason : result.error;
+
+    return result.data.body;
+  },
+});
+
+export const fc_1hegnn = fc;
+
+export const $fc_1hegnn = $fc;
+
+const $url_1hegnn = (option?: FrourioClientOption) => ({
+  get(req?: { query?: z.infer<typeof frourioSpec_1hegnn.get.query> }): { isValid: true; data: string; reason?: undefined } | { isValid: false, data?: undefined; reason: z.ZodError } {
+    const parsedQuery = frourioSpec_1hegnn.get.query.safeParse(req?.query);
+
+    if (!parsedQuery.success) return { isValid: false, reason: parsedQuery.error };
+
+    if (parsedQuery.data === undefined) return { isValid: true, data: `${option?.baseURL?.replace(/\/$/, '') ?? ''}/api/optional-request` };
+
+    const searchParams = new URLSearchParams();
+
+    Object.entries(parsedQuery.data).forEach(([key, value]) => {
+      searchParams.append(key, value.toString());
+    });
+
+    return { isValid: true, data: `${option?.baseURL?.replace(/\/$/, '') ?? ''}/api/optional-request?${searchParams.toString()}` };
+  },
+  post(): { isValid: true; data: string; reason?: undefined } | { isValid: false, data?: undefined; reason: z.ZodError } {
+    return { isValid: true, data: `${option?.baseURL?.replace(/\/$/, '') ?? ''}/api/optional-request` };
+  },
+});
+
+const methods_1hegnn = (option?: FrourioClientOption) => ({
+  async $get(req?: { headers?: z.infer<typeof frourioSpec_1hegnn.get.headers>, query?: z.infer<typeof frourioSpec_1hegnn.get.query>, init?: RequestInit }): Promise<
+    | { ok: true; isValid: true; data: { status: 200; headers?: undefined; body: z.infer<typeof frourioSpec_1hegnn.get.res[200]['body']> }; failure?: undefined; raw: Response; reason?: undefined; error?: undefined }
+    | { ok: boolean; isValid: false; data?: undefined; failure?: undefined; raw: Response; reason: z.ZodError; error?: undefined }
+    | { ok: boolean; isValid?: undefined; data?: undefined; failure?: undefined; raw: Response; reason?: undefined; error: unknown }
+    | { ok?: undefined; isValid: false; data?: undefined; failure?: undefined; raw?: undefined; reason: z.ZodError; error?: undefined }
+    | { ok?: undefined; isValid?: undefined; data?: undefined; failure?: undefined; raw?: undefined; reason?: undefined; error: unknown }
+  > {
+    const url = $url_1hegnn(option).get(req);
+
+    if (url.reason) return url;
+
+    const parsedHeaders = frourioSpec_1hegnn.get.headers.safeParse(req?.headers);
+
+    if (!parsedHeaders.success) return { isValid: false, reason: parsedHeaders.error };
+
+    const fetchFn = option?.fetch ?? fetch;
+    const result: { success: true; res: Response } | { success: false; error: unknown } = await fetchFn(
+      url.data,
+      {
+        method: 'GET',
+        ...option?.init,
+        ...req?.init,
+        headers: { ...option?.init?.headers, ...parsedHeaders.data as HeadersInit, ...req?.init?.headers },
+      }
+    ).then(res => ({ success: true, res } as const)).catch(error => ({ success: false, error }));
+
+    if (!result.success) return { error: result.error };
+
+    switch (result.res.status) {
+      case 200: {
+        const resBody: { success: true; data: unknown } | { success: false; error: unknown } = await result.res.json().then(data => ({ success: true, data } as const)).catch(error => ({ success: false, error }));
+
+        if (!resBody.success) return { ok: true, raw: result.res, error: resBody.error };
+
+        const body = frourioSpec_1hegnn.get.res[200].body.safeParse(resBody.data);
+
+        if (!body.success) return { ok: true, isValid: false, raw: result.res, reason: body.error };
+
+        return {
+          ok: true,
+          isValid: true,
+          data: { status: 200, body: body.data },
+          raw: result.res,
+        };
+      }
+      default:
+        return { ok: result.res.ok, raw: result.res, error: new Error(`Unknown status: ${result.res.status}`) };
+    }
+  },
+  async $post(req?: { init?: RequestInit }): Promise<
+    | { ok: true; isValid: true; data: { status: 200; headers?: undefined; body?: undefined }; failure?: undefined; raw: Response; reason?: undefined; error?: undefined }
+    | { ok: boolean; isValid: false; data?: undefined; failure?: undefined; raw: Response; reason: z.ZodError; error?: undefined }
+    | { ok: boolean; isValid?: undefined; data?: undefined; failure?: undefined; raw: Response; reason?: undefined; error: unknown }
+    | { ok?: undefined; isValid: false; data?: undefined; failure?: undefined; raw?: undefined; reason: z.ZodError; error?: undefined }
+    | { ok?: undefined; isValid?: undefined; data?: undefined; failure?: undefined; raw?: undefined; reason?: undefined; error: unknown }
+  > {
+    const url = $url_1hegnn(option).post();
+
+    if (url.reason) return url;
+
+    const fetchFn = option?.fetch ?? fetch;
+    const result: { success: true; res: Response } | { success: false; error: unknown } = await fetchFn(
+      url.data,
+      {
+        method: 'POST',
+        ...option?.init,
+        ...req?.init,
+        headers: { ...option?.init?.headers, ...req?.init?.headers },
+      }
+    ).then(res => ({ success: true, res } as const)).catch(error => ({ success: false, error }));
+
+    if (!result.success) return { error: result.error };
+
+    switch (result.res.status) {
+      case 200: {
+        return {
+          ok: true,
+          isValid: true,
+          data: { status: 200 },
+          raw: result.res,
+        };
+      }
+      default:
+        return { ok: result.res.ok, raw: result.res, error: new Error(`Unknown status: ${result.res.status}`) };
+    }
+  },
+});
+
